Update DAG Group2 Project2.ipynb

--- a/DAG Group2 Project2.ipynb
+++ b/DAG Group2 Project2.ipynb
@@ -52,9 +52,8 @@
     "ADJCLOSe  NUMBER(18,8)\n",
     ");\n",
     "\n",
-    "SQL_INSERT_STATEMENT_fact = f\"INSERT INTO {SNOWFLAKE_SAMPLE_TABLE} VALUES (select concat(symbol,date)as key,* from AIRFLOW0124.BF_DEV.\"Stock_History_backup_G2\" )\"\n",
-    "SQL_LIST = [SQL_INSERT_STATEMENT % {\"id\": n} for n in range(0, 10)]\n",
-    "SQL_MULTIPLE_STMTS = \"; \".join(SQL_LIST)"
+    "SQL_INSERT_STATEMENT_fact = f\"INSERT INTO {SNOWFLAKE_SAMPLE_TABLE} VALUES (select concat(symbol,date)as key,* from US_STOCK_DAILY.DCCM.Stock_History" )\"\n",
+
    ]
   },
   {
