--- a/DAG Group2 Project2.ipynb
+++ b/DAG Group2 Project2.ipynb
@@ -42,7 +42,7 @@
     "CREATE_TABLE_SQL_STRING = (\n",
     "    f\"CREATE OR REPLACE TRANSIENT TABLE {SNOWFLAKE_SAMPLE_TABLE} (\n",
     "KEY  varchar(250) PRIMARY KEY,\n",
-    "SYMBOl  VARCHAR(16) REFERENCES AIRFLOW0124.BF_DEV.\"Company_Profile_backup_G2\"(symbol),\n",
+    "SYMBOl  VARCHAR(16) REFERENCES US_STOCK_DAILY.DCCM.Company_Profile(symbol),\n",
     "DATE  DATE,\n",
     "OPEN NUMBER(18,8),\n",
     "HIGH NUMBER(18,8),\n",
